[package]
name = "payment-purse-persist"
version = "0.1.0"
authors = ["Ed Hastings <ed@gmail.com>", "Michał Papierski <michal@casperlabs.io>"]
edition = "2021"

[[bin]]
name = "payment_purse_persist"
path = "src/main.rs"
bench = false
doctest = false
test = false

[dependencies]
casper-contract = { path = "../../../contract" }
casper-types = { path = "../../../../types" }
